# Simulating-Anything

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
configs/: default.yaml
configs/domains/: agent_based.yaml  reaction_diffusion.yaml  rigid_body.yaml
docs/: DESIGN.md  RESEARCH.md
notebooks/: cross_domain_analysis.ipynb  five_domain_rediscovery.ipynb  fourteen_domain_rediscovery.ipynb  seven_domain_rediscovery.ipynb  showcase_14domain.ipynb  world_model_training.ipynb
notebooks/demos/: demo.ipynb
paper/: Makefile  main.tex  meta_analysis.tex  results_table.tex
scripts/: aggregate_all_results.py  aggregate_results.py  build_14domain_notebook.py  build_5domain_notebook.py  build_7domain_notebook.py  build_crossdomain_notebook.py  build_notebook.py  build_wm_notebook.py  demo_pipeline.py  evaluate_world_models.py  generate_ablation_figures.py  generate_cross_domain_figures.py  generate_dashboard.py  generate_domain_summary.py  generate_figures.py  generate_latex_table.py  generate_meta_analysis.py  generate_paper_figures.py  generate_paper_figures_14domain.py  generate_pipeline_figure.py  generate_sensitivity_figures.py  generate_validation_figures.py  generate_wm_figures.py  generate_world_model_figures.py  run_ablation_studies.py  run_dream_discovery.py  run_exploration_demo.py  train_world_models.py  train_world_models_14domain.py  verify_reproducibility.py
src/simulating_anything/: __init__.py  __main__.py  pipeline.py
src/simulating_anything/agents/: __init__.py  base.py  communicator.py  domain_classifier.py  problem_architect.py  simulation_builder.py
src/simulating_anything/analysis/: __init__.py  ablation.py  baseline_comparison.py  cross_domain.py  domain_statistics.py  dream_debate.py  equation_discovery.py  error_analysis.py  pipeline_ablation.py  scaling_analysis.py  sensitivity.py  symbolic_regression.py
src/simulating_anything/exploration/: __init__.py  base.py  uncertainty_driven.py
src/simulating_anything/knowledge/: __init__.py  discovery_log.py  trajectory_store.py
src/simulating_anything/rediscovery/: __init__.py  aizawa.py  allee_predator_prey.py  arneodo.py  autocatalator.py  bak_sneppen.py  bazykin.py  boltzmann_gas.py  bouncing_ball.py  brusselator.py  brusselator_2d.py  brusselator_diffusion.py  burke_shaw.py  bz_spiral.py  cable_equation.py  cahn_hilliard.py  cart_pole.py  chemostat.py  chen.py  chua.py  colpitts.py  competitive_lv.py  coupled_lorenz.py  coupled_map_lattice.py  cubic_map.py  (+100 more)
tests/: conftest.py
tests/unit/: test_agents.py  test_aizawa.py  test_all_domains.py  test_allee_predator_prey.py  test_arneodo.py  test_autocatalator.py  test_bak_sneppen.py  test_baseline_comparison.py  test_bazykin.py  test_boltzmann_gas.py  test_bouncing_ball.py  test_brusselator.py  test_brusselator_2d.py  test_brusselator_diffusion.py  test_burke_shaw.py  test_bz_spiral.py  test_cable_equation.py  test_cahn_hilliard.py  test_cart_pole.py  test_chemostat.py  test_chen.py  test_chua.py  test_cli.py  test_colpitts.py  test_competitive_lv.py  test_config.py  test_coupled_lorenz.py  test_coupled_map_lattice.py  test_coupled_oscillators.py  test_cross_domain.py  test_cubic_map.py  test_dadras.py  test_damped_wave.py  test_delayed_predator_prey.py  test_diffusive_lv.py  test_domain_expansion.py  test_dream_debate.py  test_driven_pendulum.py  test_duffing.py  test_duffing_van_der_pol.py  (+97 more)
(+143 files in other folders)
