[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simulating-anything"
version = "0.1.0"
description = "World models as a general-purpose scientific discovery engine"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "pyarrow>=14.0",
    "pandas>=2.0",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
gpu = [
    "jax[cuda13]>=0.4.30",
    "equinox>=0.11",
    "optax>=0.2",
    "diffrax>=0.6",
]
cpu = [
    "jax>=0.4.30",
    "equinox>=0.11",
    "optax>=0.2",
    "diffrax>=0.6",
]
sim = [
    "phiflow>=2.6",
    "brax>=0.10",
    "mujoco>=3.0",
]
analysis = [
    "pysr>=1.0",
    "pysindy>=2.0",
    "scikit-learn>=1.4",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]
all = [
    "simulating-anything[gpu,sim,analysis,dev]",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
