[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simulating-anything"
version = "0.2.0"
description = "Domain-agnostic scientific discovery via world models and symbolic regression"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Saurabh Jalendra", email = "saurabh@users.noreply.github.com"},
]
keywords = [
    "scientific-discovery", "symbolic-regression", "world-models",
    "equation-discovery", "simulation", "PySR", "SINDy", "RSSM",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.26",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "pyarrow>=14.0",
    "pandas>=2.0",
    "matplotlib>=3.8",
    "scipy>=1.12",
]

[project.urls]
Homepage = "https://github.com/SaurabhJalendra/Simulating-Anything"
Repository = "https://github.com/SaurabhJalendra/Simulating-Anything"
Issues = "https://github.com/SaurabhJalendra/Simulating-Anything/issues"

[project.scripts]
simulating-anything = "simulating_anything.__main__:main"

[project.optional-dependencies]
gpu = [
    "jax[cuda13]>=0.4.30",
    "equinox>=0.11",
    "optax>=0.2",
    "diffrax>=0.6",
]
cpu = [
    "jax>=0.4.30",
    "equinox>=0.11",
    "optax>=0.2",
    "diffrax>=0.6",
]
sim = [
    "phiflow>=2.6",
    "brax>=0.10",
    "mujoco>=3.0",
]
analysis = [
    "pysr>=1.0",
    "pysindy>=2.0",
    "scikit-learn>=1.4",
]
viz = [
    "networkx>=3.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]
all = [
    "simulating-anything[gpu,sim,analysis,dev]",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
